<resources>
    <string name="app_name">Hello Squirrel</string>

    <string name="first_name">Megan</string>
    <string name="last_name">Santagata</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">Hello! I am a software engineering student with experience in Python. I also dabble in IT, teaching, and tutoring.\n Nice to meet you!.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Gaming: Overwatch, Baulder\'s Gate</string>
    <string name="profile_hobby_second_text">🥈 Reading: Sci-fi, Fantasy, Romcoms</string>
    <string name="profile_hobby_third_text">🥉 Traveling with friends.</string>
</resources>